--- a/app/blocks/footer/footer.twig
+++ b/app/blocks/footer/footer.twig
@@ -1,3 +1,109 @@
 <footer class="footer">
-  Footer
+  <div class="footer__top">
+    <div class="footer__top-start">
+      <ul class="footer__socials">
+        <li class="footer__social">
+          <a href="#" class="footer__social-link">
+            <svg class="footer__social-icon" viewBox="0 0 100 100">
+              <use xlink:href="./assets/images/sprite.svg#vk"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer__social">
+          <a href="#" class="footer__social-link">
+            <svg class="footer__social-icon" viewBox="0 0 100 100">
+              <use xlink:href="./assets/images/sprite.svg#insta"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer__social">
+          <a href="#" class="footer__social-link">
+            <svg class="footer__social-icon" viewBox="0 0 100 100">
+              <use xlink:href="./assets/images/sprite.svg#fb"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <div class="footer__info">
+        <div class="footer__address footer__info-item">
+          <svg class="footer__info-icon" viewBox="0 0 100 100">
+            <use xlink:href="./assets/images/sprite.svg#place"></use>
+          </svg>
+          <span class="footer__span">г. Красноярск, ул.Чернышевского, 81</span>
+        </div>
+        <div class="footer__info-bottom">
+          <div class="footer__timetable footer__info-item">
+            <svg class="footer__info-icon" viewBox="0 0 100 100">
+              <use xlink:href="./assets/images/sprite.svg#clock"></use>
+            </svg>
+            <span class="footer__span">Пн-Вс: 10.00-20.00</span>
+          </div>
+          <a class="footer__tel footer__info-item" href="tel:+73912191000">
+            <svg class="footer__info-icon" viewBox="0 0 100 100">
+              <use xlink:href="./assets/images/sprite.svg#whatsapp"></use>
+            </svg>
+            <span class="footer__span">+7 (391) 219-10-00</span>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="footer__top-middle">
+      <a class="footer__logo-link" href="#">
+        <img class="footer__logo lazy" src="./assets/images/pixel.png" data-src="./assets/images/icons/footer-logo.svg" alt="logo">
+      </a>
+    </div>
+    <div class="footer__top-end">
+      <div class="footer__info footer__info--right">
+        <div class="footer__address footer__address--right footer__info-item">
+          <span class="footer__span">г. Симферополь, пр. Кирова, 7А</span>
+          <svg class="footer__info-icon" viewBox="0 0 100 100">
+            <use xlink:href="./assets/images/sprite.svg#place"></use>
+          </svg>
+        </div>
+        <div class="footer__info-bottom">
+          <div class="footer__timetable footer__timetable--right footer__info-item">
+            <span class="footer__span">Пн-Вс: 10.00-20.00</span>
+            <svg class="footer__info-icon" viewBox="0 0 100 100">
+              <use xlink:href="./assets/images/sprite.svg#clock"></use>
+            </svg>
+          </div>
+          <a class="footer__tel footer__tel--right footer__info-item" href="tel:+73652773377">
+            <span class="footer__span">+7 (365) 277-33-77</span>
+            <svg class="footer__info-icon" viewBox="0 0 100 100">
+              <use xlink:href="./assets/images/sprite.svg#whatsapp"></use>
+            </svg>
+          </a>
+        </div>
+      </div>
+      <ul class="footer__socials">
+        <li class="footer__social">
+          <a href="#" class="footer__social-link">
+            <svg class="footer__social-icon" viewBox="0 0 100 100">
+              <use xlink:href="./assets/images/sprite.svg#vk"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer__social">
+          <a href="#" class="footer__social-link">
+            <svg class="footer__social-icon" viewBox="0 0 100 100">
+              <use xlink:href="./assets/images/sprite.svg#insta"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer__social">
+          <a href="#" class="footer__social-link">
+            <svg class="footer__social-icon" viewBox="0 0 100 100">
+              <use xlink:href="./assets/images/sprite.svg#fb"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="footer__center">
+
+  </div>
+  <div class="footer__bottom">
+
+  </div>
 </footer>
