--- a/app/blocks/link/link.twig
+++ b/app/blocks/link/link.twig
@@ -2,6 +2,7 @@
 <script src="./assets/libs/js/swiper-bundle.min.js"></script>
 <script src="./assets/libs/js/wow.min.js"></script>
 <script src="./assets/libs/js/lazyload.min.js"></script>
+<script src="./assets/libs/js/imask.min.js"></script>
 <script src="./assets/scripts/app.min.js"></script>
 </body>
 </html>
