--- a/app/blocks/footer/footer.twig
+++ b/app/blocks/footer/footer.twig
@@ -100,10 +100,257 @@
       </ul>
     </div>
   </div>
-  <div class="footer__center">
+  <div class="footer__center js-footer-wrap">
 
+    <div class="footer__categories-inner">
+      <div class="footer__categories-title js-acc-btn">
+        Обувь
+        <button class="footer__acc-btn js-acc-btn">
+          <svg class="footer__plus-icon" viewBox="0 0 100 100">
+            <use xlink:href="./assets/images/sprite.svg#plus"></use>
+          </svg>
+        </button>
+      </div>
+      <ul class="footer__categories">
+        <li class="footer__category">
+          <ul class="footer__subcategories">
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Ботильоны</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Ботинки</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Кроссовки</a>
+            </li>
+          </ul>
+        </li>
+        <li class="footer__category">
+          <ul class="footer__subcategories">
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Сапоги</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Туфли</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Вся обувь</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+    <div class="footer__categories-inner">
+      <div class="footer__categories-title js-acc-btn">
+        Сумки
+        <button class="footer__acc-btn js-acc-btn">
+          <svg class="footer__plus-icon" viewBox="0 0 100 100">
+            <use xlink:href="./assets/images/sprite.svg#plus"></use>
+          </svg>
+        </button>
+      </div>
+      <ul class="footer__categories">
+        <li class="footer__category">
+          <ul class="footer__subcategories">
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Багаж</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Клатчи</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Кошельки</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Поясные сумки</a>
+            </li>
+          </ul>
+        </li>
+        <li class="footer__category">
+          <ul class="footer__subcategories">
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Рюкзаки</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Спортивные сумки</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Сумки</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Сумки для ноутбука</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+    <div class="footer__categories-inner">
+      <div class="footer__categories-title js-acc-btn">
+        Одежда
+        <button class="footer__acc-btn js-acc-btn">
+          <svg class="footer__plus-icon" viewBox="0 0 100 100">
+            <use xlink:href="./assets/images/sprite.svg#plus"></use>
+          </svg>
+        </button>
+      </div>
+      <ul class="footer__categories">
+        <li class="footer__category">
+          <ul class="footer__subcategories">
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Брюки</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Верхняя одежда</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Джемперы и свитеры</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Джинсы</a>
+            </li>
+          </ul>
+        </li>
+        <li class="footer__category">
+          <ul class="footer__subcategories">
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Кардиганы и кофты</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Платья</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Трикотаж</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Юбки</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Вся одежда</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+    <div class="footer__categories-inner">
+      <div class="footer__categories-title js-acc-btn">
+        Аксессуары
+        <button class="footer__acc-btn js-acc-btn">
+          <svg class="footer__plus-icon" viewBox="0 0 100 100">
+            <use xlink:href="./assets/images/sprite.svg#plus"></use>
+          </svg>
+        </button>
+      </div>
+      <ul class="footer__categories">
+        <li class="footer__category">
+          <ul class="footer__subcategories">
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Головные уборы</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Другие аксессуары</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Защитные маски</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Очки и оправы</a>
+            </li>
+          </ul>
+        </li>
+        <li class="footer__category">
+          <ul class="footer__subcategories">
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Ремни и подтяжки</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Сумки и рюкзаки</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Украшения</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Часы</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Все аксессуары</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+    <div class="footer__categories-inner">
+      <div class="footer__categories-title js-acc-btn">
+        Уходовая косметика
+        <button class="footer__acc-btn js-acc-btn">
+          <svg class="footer__plus-icon" viewBox="0 0 100 100">
+            <use xlink:href="./assets/images/sprite.svg#plus"></use>
+          </svg>
+        </button>
+      </div>
+      <ul class="footer__categories">
+        <li class="footer__category">
+          <a href="#" class="footer__category-link">Для одежды</a>
+        </li>
+        <li class="footer__category">
+          <a href="#" class="footer__category-link">Для обуви</a>
+        </li>
+        <li class="footer__category">
+          <a href="#" class="footer__category-link">Для аксессуаров</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="footer__categories-inner">
+      <ul class="footer__add-categories">
+        <li class="footer__category">
+          <ul class="footer__subcategories">
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Размерная сетка</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Условия возврата и обмена</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Политика конфиденциальности</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Способы оплат</a>
+            </li>
+          </ul>
+        </li>
+        <li class="footer__category">
+          <ul class="footer__subcategories">
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Способы доставки</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Самовывоз Красноярск</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Партнеры</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Юридический раздел</a>
+            </li>
+            <li class="footer__subcategory">
+              <a href="#" class="footer__subcategory-link">Полезная информация</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
   </div>
   <div class="footer__bottom">
-
+    <div class="footer__copyright">© 2020 Brando. Все права сохранены</div>
+    <a href="https://github.com/vladsvir888" class="footer__developer" target="_blank">
+      Разработка сайта -
+      <svg class="footer__developer-icon" viewBox="0 0 100 100">
+        <use xlink:href="./assets/images/sprite.svg#github"></use>
+      </svg>
+    </a>
   </div>
 </footer>
