--- a/app/pages/index.twig
+++ b/app/pages/index.twig
@@ -17,6 +17,9 @@
       <li class="progress__item">
         <a class="progress__link" href="./passw-recovery.html" target="_blank">Попап восстановление пароля</a>
       </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./main.html" target="_blank">Главная</a>
+      </li>
     </ul>
   </div>
 </main>
