--- a/app/styles/helpers/variables.scss
+++ b/app/styles/helpers/variables.scss
@@ -71,11 +71,26 @@ $sm: 500px;
 %text-60 {
   font-size: 6rem;
   line-height: 7rem;
+
+  // @media (max-width: $md) {
+  //   font-size: 3rem;
+  //   line-height: 4rem;
+  // }
 }
 
 %text-120 {
   font-size: 12rem;
   line-height: 13rem;
+
+  // @media (max-width: $lg) {
+  //   font-size: 8rem;
+  //   line-height: 10rem;
+  // }
+
+  // @media (max-width: $md) {
+  //   font-size: 5rem;
+  //   line-height: 7rem;
+  // }
 }
 
 %pos-center-x {
