--- a/app/pages/index.twig
+++ b/app/pages/index.twig
@@ -20,6 +20,9 @@
       <li class="progress__item">
         <a class="progress__link" href="./main.html" target="_blank">Главная</a>
       </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./about.html" target="_blank">О нас</a>
+      </li>
     </ul>
   </div>
 </main>
