--- a/app/blocks/head/head.twig
+++ b/app/blocks/head/head.twig
@@ -30,6 +30,8 @@
   <link rel="stylesheet" href="./assets/libs/css/swiper-bundle.min.css">
   <!-- animate.css -->
   <link rel="stylesheet" href="./assets/libs/css/animate.min.css">
+  <!-- sweetalert -->
+  <link rel="stylesheet" href="./assets/libs/css/sweetalert2.min.css">
   <!--Styles-->
   <link id="app-css" rel="stylesheet" href="./assets/styles/app.min.css">
   <script>
