--- a/app/blocks/link/link.twig
+++ b/app/blocks/link/link.twig
@@ -3,6 +3,7 @@
 <script src="./assets/libs/js/wow.min.js"></script>
 <script src="./assets/libs/js/lazyload.min.js"></script>
 <script src="./assets/libs/js/imask.min.js"></script>
+<script src="./assets/libs/js/sweetalert2.min.js"></script>
 <script src="./assets/scripts/app.min.js"></script>
 </body>
 </html>
