--- a/app/blocks/about/about-slider/about-slider.scss
+++ b/app/blocks/about/about-slider/about-slider.scss
@@ -4,7 +4,12 @@
     grid-template-columns: 64rem 1fr;
     gap: 4rem;
     padding: 6rem 0;
-    height: 50rem;
+    min-height: 50rem;
+
+    @media (max-width: $lg) {
+      grid-template-columns: 1fr;
+      padding: 0;
+    }
 
     &::before {
       position: absolute;
@@ -15,12 +20,20 @@
       z-index: -1;
       background-color: var(--gray4);
       content: '';
+
+      @media (max-width: $lg) {
+        content: none;
+      }
     }
   }
 
   &__content {
     @extend %flex-column;
     padding-top: 8rem;
+
+    @media (max-width: $lg) {
+      padding-top: 0;
+    }
   }
 
   &__title {
@@ -37,6 +50,7 @@
     line-height: 2.6rem;
     max-width: 68rem;
     flex-grow: 1;
+    padding-bottom: 3rem;
   }
 
   .swiper-button-next,
@@ -62,6 +76,15 @@
   }
 
   &__img {
-    @extend %cover;
+    height: 38rem;
+    width: 100%;
+
+    @media (max-width: $md) {
+      height: 25rem;
+    }
+
+    @media (max-width: $sm) {
+      height: 20rem;
+    }
   }
 }
